# invoicebridge-api

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.multi-region.yml  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: germany-pilot.yml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/core/: config.py  logging.py  rate_limit.py  regions.py  security.py
app/db/: models.py  session.py  url.py
app/schemas/: audit.py  compliance.py  invoice.py  mandate.py  region.py  tenant.py  validation.py  webhook.py
app/services/: audit.py  checksum.py  compliance.py  country_profiles.py  invoices.py  money.py  official_validation.py  spain_sif.py  spanish_sif_signing.py  tenants.py
docs/: api_examples.md  architecture.md  cloud_deployment_patterns.md  demo_script.md  limitations.md  multi_region.md  neon_demo_database.md  production_readiness.md  reviewer_guide.md  spain_sif_readiness.md
examples/: belgium_invalid_invoice.json  belgium_valid_invoice.json  curl_examples.sh  germany_demo.sh  germany_valid_invoice.json  poland_valid_invoice.json  romania_valid_invoice.json  spain_valid_invoice.json
scripts/: setup_spanish_sif_assets.sh  setup_xrechnung_validator.sh  smoke_multi_region.sh
site/: index.html
tests/: conftest.py  test_audit_trail.py  test_compliance_readiness.py  test_database_url.py  test_health.py  test_invoice_send.py  test_invoice_transform.py  test_invoice_validation.py  test_mandates.py  test_regions.py  test_spain_sif.py  test_tenant_auth_scope.py  test_tenants.py  test_webhooks.py
(+41 files in other folders)
